// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeersCard: index mapStateToProps 1`] = `
Object {
  "node": Object {
    "coinbase": Object {
      "coinbase": "82069cc441c42b2706fa5d3129deeb677812e5a5",
    },
    "name": "LOCALHOST",
    "peers": Object {
      "192.168.10.33": "3005",
      "192.168.10.36": "3004",
    },
  },
}
`;

exports[`PeersCard: index render component with values 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PeersCard
    node={
      Object {
        "coinbase": Object {
          "coinbase": "82069cc441c42b2706fa5d3129deeb677812e5a5",
        },
        "name": "LOCALHOST",
        "peers": Object {
          "192.168.10.33": "3005",
          "192.168.10.36": "3004",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h5>
          Peers 
          (2)
        </h5>,
        Array [
          <div
            className="row node-peers"
          >
            <div
              className="col-xs-3"
            >
              <small>
                IP:
              </small>
            </div>
            <div
              className="col-xs-9"
            >
              <Text
                ellipsize={true}
              >
                <small>
                  192.168.10.36
                </small>
              </Text>
            </div>
            <div
              className="col-xs-3"
            >
              <small>
                Port:
              </small>
            </div>
            <div
              className="col-xs-9"
            >
              <Text
                ellipsize={true}
              >
                <small>
                  3004
                </small>
              </Text>
            </div>
          </div>,
          <div
            className="row node-peers"
          >
            <div
              className="col-xs-3"
            >
              <small>
                IP:
              </small>
            </div>
            <div
              className="col-xs-9"
            >
              <Text
                ellipsize={true}
              >
                <small>
                  192.168.10.33
                </small>
              </Text>
            </div>
            <div
              className="col-xs-3"
            >
              <small>
                Port:
              </small>
            </div>
            <div
              className="col-xs-9"
            >
              <Text
                ellipsize={true}
              >
                <small>
                  3005
                </small>
              </Text>
            </div>
          </div>,
        ],
      ],
      "className": "pt-card pt-elevation-2",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Peers ",
            "(2)",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Peers ",
          "(2)",
        ],
        "type": "h5",
      },
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-xs-3"
            >
              <small>
                IP:
              </small>
            </div>,
            <div
              className="col-xs-9"
            >
              <Text
                ellipsize={true}
              >
                <small>
                  192.168.10.36
                </small>
              </Text>
            </div>,
            <div
              className="col-xs-3"
            >
              <small>
                Port:
              </small>
            </div>,
            <div
              className="col-xs-9"
            >
              <Text
                ellipsize={true}
              >
                <small>
                  3004
                </small>
              </Text>
            </div>,
          ],
          "className": "row node-peers",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <small>
                IP:
              </small>,
              "className": "col-xs-3",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "IP:",
              },
              "ref": null,
              "rendered": "IP:",
              "type": "small",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Text
                ellipsize={true}
              >
                <small>
                  192.168.10.36
                </small>
              </Text>,
              "className": "col-xs-9",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <small>
                  192.168.10.36
                </small>,
                "ellipsize": true,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "192.168.10.36",
                },
                "ref": null,
                "rendered": "192.168.10.36",
                "type": "small",
              },
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <small>
                Port:
              </small>,
              "className": "col-xs-3",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Port:",
              },
              "ref": null,
              "rendered": "Port:",
              "type": "small",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Text
                ellipsize={true}
              >
                <small>
                  3004
                </small>
              </Text>,
              "className": "col-xs-9",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <small>
                  3004
                </small>,
                "ellipsize": true,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "3004",
                },
                "ref": null,
                "rendered": "3004",
                "type": "small",
              },
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-xs-3"
            >
              <small>
                IP:
              </small>
            </div>,
            <div
              className="col-xs-9"
            >
              <Text
                ellipsize={true}
              >
                <small>
                  192.168.10.33
                </small>
              </Text>
            </div>,
            <div
              className="col-xs-3"
            >
              <small>
                Port:
              </small>
            </div>,
            <div
              className="col-xs-9"
            >
              <Text
                ellipsize={true}
              >
                <small>
                  3005
                </small>
              </Text>
            </div>,
          ],
          "className": "row node-peers",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <small>
                IP:
              </small>,
              "className": "col-xs-3",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "IP:",
              },
              "ref": null,
              "rendered": "IP:",
              "type": "small",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Text
                ellipsize={true}
              >
                <small>
                  192.168.10.33
                </small>
              </Text>,
              "className": "col-xs-9",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <small>
                  192.168.10.33
                </small>,
                "ellipsize": true,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "192.168.10.33",
                },
                "ref": null,
                "rendered": "192.168.10.33",
                "type": "small",
              },
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <small>
                Port:
              </small>,
              "className": "col-xs-3",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Port:",
              },
              "ref": null,
              "rendered": "Port:",
              "type": "small",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Text
                ellipsize={true}
              >
                <small>
                  3005
                </small>
              </Text>,
              "className": "col-xs-9",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <small>
                  3005
                </small>,
                "ellipsize": true,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "3005",
                },
                "ref": null,
                "rendered": "3005",
                "type": "small",
              },
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h5>
            Peers 
            (2)
          </h5>,
          Array [
            <div
              className="row node-peers"
            >
              <div
                className="col-xs-3"
              >
                <small>
                  IP:
                </small>
              </div>
              <div
                className="col-xs-9"
              >
                <Text
                  ellipsize={true}
                >
                  <small>
                    192.168.10.36
                  </small>
                </Text>
              </div>
              <div
                className="col-xs-3"
              >
                <small>
                  Port:
                </small>
              </div>
              <div
                className="col-xs-9"
              >
                <Text
                  ellipsize={true}
                >
                  <small>
                    3004
                  </small>
                </Text>
              </div>
            </div>,
            <div
              className="row node-peers"
            >
              <div
                className="col-xs-3"
              >
                <small>
                  IP:
                </small>
              </div>
              <div
                className="col-xs-9"
              >
                <Text
                  ellipsize={true}
                >
                  <small>
                    192.168.10.33
                  </small>
                </Text>
              </div>
              <div
                className="col-xs-3"
              >
                <small>
                  Port:
                </small>
              </div>
              <div
                className="col-xs-9"
              >
                <Text
                  ellipsize={true}
                >
                  <small>
                    3005
                  </small>
                </Text>
              </div>
            </div>,
          ],
        ],
        "className": "pt-card pt-elevation-2",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Peers ",
              "(2)",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Peers ",
            "(2)",
          ],
          "type": "h5",
        },
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-xs-3"
              >
                <small>
                  IP:
                </small>
              </div>,
              <div
                className="col-xs-9"
              >
                <Text
                  ellipsize={true}
                >
                  <small>
                    192.168.10.36
                  </small>
                </Text>
              </div>,
              <div
                className="col-xs-3"
              >
                <small>
                  Port:
                </small>
              </div>,
              <div
                className="col-xs-9"
              >
                <Text
                  ellipsize={true}
                >
                  <small>
                    3004
                  </small>
                </Text>
              </div>,
            ],
            "className": "row node-peers",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <small>
                  IP:
                </small>,
                "className": "col-xs-3",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "IP:",
                },
                "ref": null,
                "rendered": "IP:",
                "type": "small",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Text
                  ellipsize={true}
                >
                  <small>
                    192.168.10.36
                  </small>
                </Text>,
                "className": "col-xs-9",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <small>
                    192.168.10.36
                  </small>,
                  "ellipsize": true,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "192.168.10.36",
                  },
                  "ref": null,
                  "rendered": "192.168.10.36",
                  "type": "small",
                },
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <small>
                  Port:
                </small>,
                "className": "col-xs-3",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Port:",
                },
                "ref": null,
                "rendered": "Port:",
                "type": "small",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Text
                  ellipsize={true}
                >
                  <small>
                    3004
                  </small>
                </Text>,
                "className": "col-xs-9",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <small>
                    3004
                  </small>,
                  "ellipsize": true,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "3004",
                  },
                  "ref": null,
                  "rendered": "3004",
                  "type": "small",
                },
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-xs-3"
              >
                <small>
                  IP:
                </small>
              </div>,
              <div
                className="col-xs-9"
              >
                <Text
                  ellipsize={true}
                >
                  <small>
                    192.168.10.33
                  </small>
                </Text>
              </div>,
              <div
                className="col-xs-3"
              >
                <small>
                  Port:
                </small>
              </div>,
              <div
                className="col-xs-9"
              >
                <Text
                  ellipsize={true}
                >
                  <small>
                    3005
                  </small>
                </Text>
              </div>,
            ],
            "className": "row node-peers",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <small>
                  IP:
                </small>,
                "className": "col-xs-3",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "IP:",
                },
                "ref": null,
                "rendered": "IP:",
                "type": "small",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Text
                  ellipsize={true}
                >
                  <small>
                    192.168.10.33
                  </small>
                </Text>,
                "className": "col-xs-9",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <small>
                    192.168.10.33
                  </small>,
                  "ellipsize": true,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "192.168.10.33",
                  },
                  "ref": null,
                  "rendered": "192.168.10.33",
                  "type": "small",
                },
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <small>
                  Port:
                </small>,
                "className": "col-xs-3",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Port:",
                },
                "ref": null,
                "rendered": "Port:",
                "type": "small",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Text
                  ellipsize={true}
                >
                  <small>
                    3005
                  </small>
                </Text>,
                "className": "col-xs-9",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <small>
                    3005
                  </small>,
                  "ellipsize": true,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "3005",
                  },
                  "ref": null,
                  "rendered": "3005",
                  "type": "small",
                },
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
          "getChildContext": Object {
            "calledByRenderer": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`PeersCard: index render component without values 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PeersCard
    node={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h5>
          Peers 
          (0)
        </h5>,
        <Text
          ellipsize={true}
        >
          <small>
            No peers
          </small>
        </Text>,
      ],
      "className": "pt-card pt-elevation-2",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Peers ",
            "(0)",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Peers ",
          "(0)",
        ],
        "type": "h5",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <small>
            No peers
          </small>,
          "ellipsize": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "No peers",
          },
          "ref": null,
          "rendered": "No peers",
          "type": "small",
        },
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h5>
            Peers 
            (0)
          </h5>,
          <Text
            ellipsize={true}
          >
            <small>
              No peers
            </small>
          </Text>,
        ],
        "className": "pt-card pt-elevation-2",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Peers ",
              "(0)",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Peers ",
            "(0)",
          ],
          "type": "h5",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <small>
              No peers
            </small>,
            "ellipsize": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "No peers",
            },
            "ref": null,
            "rendered": "No peers",
            "type": "small",
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
          "getChildContext": Object {
            "calledByRenderer": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;
